remove stack depth cap